Cherry-pick r266052. rdar://problem/71120601

RTCRtpSynchronizationSource.rtpTimestamp is not present
    https://bugs.webkit.org/show_bug.cgi?id=215722

    Patch by Justin Uberti <justin@uberti.name> on 2020-08-24
    Reviewed by Youenn Fablet.

    LayoutTests/imported/w3c:

    Updated expectations file to indicate that tests checking for .rtpTimestamp now pass.

    * LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https-expected.txt:

    Source/WebCore:

    Updated expected results in LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCRtpReceiver-getSynchronizationSources.https-expected.txt.

    * Modules/mediastream/RTCRtpContributingSource.idl:
    * Modules/mediastream/RTCRtpContributingSource.idl:
    * Modules/mediastream/RTCRtpSynchronizationSource.idl:
    Minor modification to ensure JSRTCRtpSynchronizationSource.cpp gets regenerated.
    * Modules/mediastream/libwebrtc/LibWebRTCRtpReceiverBackend.cpp:
    (WebCore::fillRTCRtpContributingSource):

    Canonical link: https://commits.webkit.org/228529@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266052 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.310@safari-610.3.7.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.3.7.1-branch@269518 268f45cc-cd09-0410-ab3c-d52691b4dbfc